--- a/animuls/index.html
+++ b/animuls/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Pick a Door</h1>
-    <img src="/animuls/Pics/door.jpg" alt="">
-    <img src="/animuls/Pics/door.jpg" alt="">
-    <img src="/animuls/Pics/door.jpg" alt="">
-    <img src="/animuls/Pics/door.jpg" alt="">
+    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door1"></a>
+    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door2"></a>
+    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door3"></a>
+    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door4"></a>
 </body>
 </html>
