--- a/animuls/index.html
+++ b/animuls/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Pick a Door</h1>
-    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door1"></a>
-    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door2"></a>
-    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door3"></a>
-    <a href=""><img src="/animuls/Pics/door.jpg" alt="" class="door4"></a>
+    <a href="/animuls/lostRoom.html"><img src="/animuls/Pics/door.jpg" alt="" class="door1"></a>
+    <a href="/animuls/fakeDoors.html"><img src="/animuls/Pics/door.jpg" alt="" class="door2"></a>
+    <a href="/animuls/room237.html"><img src="/animuls/Pics/door.jpg" alt="" class="door3"></a>
+    <a href="/animuls/matrix.html"><img src="/animuls/Pics/door.jpg" alt="" class="door4"></a>
 </body>
 </html>
