--- a/animuls/jhonny.html
+++ b/animuls/jhonny.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/animuls/Pics/fake.jpg" alt="">
-    <h1>It was just a fake door...</h1>
+    <img src="/animuls/Pics/jhonny.jpg" alt="">
     <a href="/animuls/index.html">
-        <h1>Go back</h1>
+        <h1>RUN</h1>
     </a>
 </body>
 </html>
