--- a/animuls/lostRoom.html
+++ b/animuls/lostRoom.html
@@ -7,7 +7,7 @@
     <title>Just some hotel room...</title>
 </head>
 <body>
-    <img src="/animuls/lostRoom.html" alt="">
+    <img src="/animuls/Pics/lostroom.jpg" alt="">
     <h1>Just looks like some ordinary hotel room...</h1>
     <a href="/animuls/index.html">
         <h1>Go back</h1>
