--- a/animuls/architect.html
+++ b/animuls/architect.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/animuls/Pics/fake.jpg" alt="">
-    <h1>It was just a fake door...</h1>
+    <img src="/animuls/Pics/architect.jpg" alt="">
     <a href="/animuls/index.html">
-        <h1>Go back</h1>
+        <h1>Restart the matrix</h1>
+    </a>
+    <a href="http://www.google.com">
+        <h1>End the cycle</h1>
     </a>
 </body>
 </html>
