--- a/animuls/matrix.html
+++ b/animuls/matrix.html
@@ -10,7 +10,7 @@
     <a href="/animuls/architect.html"><img src="/animuls/Pics/matrix.jpg" alt=""></a>
     <h1>This is getting rediculous</h1>
     <a href="/animuls/index.html">
-        <h1>GO back</h1>
+        <h1>Go back</h1>
     </a>
 </body>
 </html>
