--- a/Doors/lostRoom.html
+++ b/Doors/lostRoom.html
@@ -7,9 +7,9 @@
     <title>Just some hotel room...</title>
 </head>
 <body>
-    <img src="/animuls/Pics/lostroom.jpg" alt="">
+    <img src="/Doors/Pics/lostroom.jpg" alt="">
     <h1>Just looks like some ordinary hotel room...</h1>
-    <a href="/animuls/index.html">
+    <a href="/Doors/index.html">
         <h1>Go back</h1>
     </a>
 </body>
