--- a/Doors/room237.html
+++ b/Doors/room237.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/animuls/architect.html"><img src="/animuls/Pics/matrix.jpg" alt=""></a>
-    <h1>This is getting rediculous</h1>
-    <a href="/animuls/index.html">
-        <h1>Go back</h1>
+    <img src="/Doors/Pics/room237.jpg" alt="">
+    <h1>Thats a strange room, Better leave...</h1>
+    <a href="/Doors/jhonny.html">
+        <h1>Leave</h1>
     </a>
 </body>
 </html>
