--- a/Doors/matrix.html
+++ b/Doors/matrix.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/Doors/architect.html"><img src="/Doors/Pics/matrix.jpg" alt=""></a>
+    <a href="../Doors/architect.html"><img src="../Doors/Pics/matrix.jpg" alt=""></a>
     <h1>This is getting rediculous</h1>
-    <a href="/Doors/index.html">
+    <a href="../Doors/index.html">
         <h1>Go back</h1>
     </a>
 </body>
