--- a/Doors/room237.html
+++ b/Doors/room237.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/Doors/Pics/room237.jpg" alt="">
+    <img src="../Doors/Pics/room237.jpg" alt="">
     <h1>Thats a strange room, Better leave...</h1>
-    <a href="/Doors/jhonny.html">
+    <a href="../Doors/jhonny.html">
         <h1>Leave</h1>
     </a>
 </body>
