--- a/Doors/architect.html
+++ b/Doors/architect.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/Doors/Pics/architect.jpg" alt="">
-    <a href="/Doors/index.html">
+    <img src="../Doors/Pics/architect.jpg" alt="">
+    <a href="../Doors/index.html">
         <h1>Restart the matrix</h1>
     </a>
     <a href="http://www.google.com">
