--- a/Doors/fakeDoors.html
+++ b/Doors/fakeDoors.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/Doors/Pics/fake.jpg" alt="">
+    <img src="../Doors/Pics/fake.jpg" alt="">
     <h1>It was just a fake door...</h1>
-    <a href="/Doors/index.html">
+    <a href="../Doors/index.html">
         <h1>Go back</h1>
     </a>
 </body>
