--- a/Doors/jhonny.html
+++ b/Doors/jhonny.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/Doors/Pics/jhonny.jpg" alt="">
-    <a href="/Doors/index.html">
+    <img src="../Doors/Pics/jhonny.jpg" alt="">
+    <a href="../Doors/index.html">
         <h1>RUN</h1>
     </a>
 </body>
