--- a/cssPosition/main.html
+++ b/cssPosition/main.html
@@ -8,9 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bg_top"></div>
-    <div class="container">
-        <div class="card">
+<div class="container">
+        <div class="title">THIS IS A TITLE</div>
+        <div class="bg_top"></div>
+        <div class="group group1">
+            <div class="devider devider1">First Group</div>
+            <div class="card">
             <div class="card_pic">
                 <div class="card_pic-notification">1</div>
             </div>
@@ -24,8 +27,8 @@
                 <div class="card_data-interactions">0<div>Shrubberies</div></div>
             </div>
             <div class="card_button">GIVE HIM A SHRUBBERY</div>
-        </div>
-        <div class="card">
+            </div>
+            <div class="card">
                 <div class="card_pic">
                     <div class="card_pic-notification">1</div>
                 </div>
@@ -39,8 +42,11 @@
                     <div class="card_data-interactions">0<div>Shrubberies</div></div>
                 </div>
                 <div class="card_button">GIVE HIM A SHRUBBERY</div>
-        </div>
-        <div class="card">
+            </div>
+         </div>
+        <div class="group group2">
+            <div class="devider devider2">Second Group</div>
+            <div class="card">
                     <div class="card_pic">
                         <div class="card_pic-notification">1</div>
                     </div>
@@ -54,8 +60,8 @@
                         <div class="card_data-interactions">0<div>Shrubberies</div></div>
                     </div>
                     <div class="card_button">GIVE HIM A SHRUBBERY</div>
-         </div>
-        <div class="card">
+            </div>
+            <div class="card">
                         <div class="card_pic">
                             <div class="card_pic-notification">1</div>
                         </div>
@@ -69,7 +75,11 @@
                             <div class="card_data-interactions">0<div>Shrubberies</div></div>
                         </div>
                         <div class="card_button">GIVE HIM A SHRUBBERY</div>
-        </div>
+          </div>
+          </div>
+
+        <div class="group group3">
+        <div class="devider devider3">Third Group</div>
         <div class="card">
                 <div class="card_pic">
                     <div class="card_pic-notification">1</div>
@@ -100,8 +110,8 @@
                 </div>
                 <div class="card_button">GIVE HIM A SHRUBBERY</div>
         </div>
-                
-    </div>
+        </div>
+</div>
 
 
     
